--- a/_sections/current-projects.html
+++ b/_sections/current-projects.html
@@ -1,32 +1,32 @@
 ---
-title: Current Projects
+title: Projects
 icon: fa-rocket
 order: 3
 ---
 <div class="row">
   <div class="4u 12u$(mobile)">
     <div class="item">
-      <a href="https://www.udacity.com/grow-with-google" class="image fit"><img src="assets/images/grow-with-google.png" alt="Badge: Google Developer Challenge Scholarship, 2018 Recipient" /></a>
+      <a href="https://www.kaggle.com/c/carvana-image-masking-challenge" class="image fit"><img src="assets/images/kaggle_carvana.jpg" alt="Badge: Google Developer Challenge Scholarship, 2018 Recipient" /></a>
       <header>
-        <h3>Grow with Google: Mobile Web Specialist Track</h3>
+        <h3>Carvana Image Masking Challenge</h3>
       </header>
     </div>
     <div class="item">
-      <a href="https://github.com/chrisbobbe/jekyll-theme-prologue" class="image fit"><img src="assets/images/prologue-large.png" alt="Jekyll theme thumbnail: Prologue by HTML5 UP" /></a>
+      <a href="https://github.com/chrisbobbe/jekyll-theme-prologue" class="image fit"><img src="assets/images/kaggle_conservatory.jpg" alt="Jekyll theme thumbnail: Prologue by HTML5 UP" /></a>
       <header>
-        <h3>Jekyll Theme: Prologue (<a href="https://chrisbobbe.github.io/jekyll-theme-prologue/">see demo</a>, <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">see code</a>)</h3>
+        <h3>The Nature Conservancy Fisheries Monitoring</h3>
       </header>
     </div>
   </div>
   <div class="4u 12u$(mobile)">
     <div class="item">
-      <a href="http://www.mild-mandarin.com/" class="image fit scrolly"><img src="assets/images/mild-mandarin.png" alt="WordPress website thumbnail: mild-mandarin.com" /></a>
+      <a href="https://www.kaggle.com/c/recognizing-faces-in-the-wild" class="image fit scrolly"><img src="assets/images/kaggle_kin_detection.jpg" alt="WordPress website thumbnail: mild-mandarin.com" /></a>
       <header>
-        <h3>mild-mandarin.com: Easy Chinese Lessons with Richard Chen</h3>
+        <h3>Face recognition in Wild - Kin detection</h3>
       </header>
     </div>
       <div class="item">
-        <a href="#contact" class="image fit scrolly"><img src="assets/images/pic04.jpg" alt="Blank project thumbnail" /></a>
+        <a href="https://arxiv.org/pdf/1811.04535.pdf" class="image fit scrolly"><img src="assets/images/rs_paper.png" alt="Blank project thumbnail" /></a>
         <header>
           <h3>More links coming soon...or <a href="#contact" class="scrolly">your own project?</a></h3>
         </header>
