--- a/_sections/photo.html
+++ b/_sections/photo.html
@@ -1,8 +1,8 @@
 ---
-title: Photo
+title: About
 cover-photo: assets/images/banner.jpg
-cover-photo-alt: "Cover photo: Dome of Light art installation, Kaohsiung, Taiwan"
+cover-photo-alt: 'Cover photo: Dome of Light art installation, Kaohsiung, Taiwan'
 auto-header: none
-icon: fa-camera
 order: 1
 ---
+
