--- a/_sections/photo_new.html
+++ b/_sections/photo_new.html
@@ -1,6 +1,6 @@
 ---
 title: About
-cover-photo: assets/images/banner.jpg
+cover-photo: assets/images/banner_new.jpg
 cover-photo-alt: 'Cover photo: Dome of Light art installation, Kaohsiung, Taiwan'
 auto-header: none
 order: 1
